# jaxPOSEIDON

./: .gitignore  .pre-commit-config.yaml  CASE_STUDY.md  CLAUDE.md  LICENSE  MISMATCHES.md  PKGBUILD  README.md  pyproject.toml
.github/workflows/: ci.yml  source-grep-gate.yml
docs/v0_5/: EXTERNAL_DATA.md  POSEIDON_PIN.md  POSEIDON_PUBLIC_API_AUDIT.md
jaxposeidon/: __init__.py  _aerosol_db_loader.py  _atmosphere.py  _chemistry.py  _clouds.py  _compute_spectrum.py  _constants.py  _contributions.py  _data.py  _eddysed_input_loader.py  _emission.py  _fastchem_grid_loader.py  _geometry.py  _h_minus.py  _high_res.py  _instrument_setup.py  _instruments.py  _jax_contributions.py  _jax_filters.py  _jax_interpolate.py  _jax_lbl.py  _jax_special.py  _jax_transmission.py  _jax_transmission_setup.py  _lbl.py  _lbl_table_loader.py  _loaddata.py  _opacities.py  _opacity_precompute.py  _output.py  _parameter_setup.py  _parameters.py  _priors.py  _retrieval.py  _setup_api.py  _species_data.py  _stellar.py  _stellar_grid_loader.py  _surface_setup.py  _transmission.py  (+1 more)
scripts/: check_version.py  generate_binning_figure.py  generate_parity_figures.py  generate_sweep_histogram.py  prevent-master-commit.sh  prevent-master-push.sh  source_grep_gate.py
tests/: conftest.py  oracle.py  test_phase0_scaffold.py  test_phase10_priors.py  test_phase10_retrieval.py  test_phase1_parameters.py  test_phase2_atmosphere.py  test_phase3_opacity.py  test_phase4_extinction.py  test_phase5_clouds.py  test_phase7_transmission.py  test_phase8_instruments.py  test_phase9_compute_spectrum.py  test_phase9_grad.py  test_phase9_loaddata.py  test_phase9_sweep.py  test_phase_v05_10_clr.py  test_phase_v05_11_stellar.py  test_phase_v05_12_mie.py  test_phase_v05_12b_mie_runtime.py  test_phase_v05_13a_emission_basic.py  test_phase_v05_13b_toon.py  test_phase_v05_13d_surface_emission.py  test_phase_v05_14_eddysed.py  test_phase_v05_15_lbl.py  test_phase_v05_15b_extinction_lbl.py  test_phase_v05_15c_lbl_multi_dim.py  test_phase_v05_16_high_res.py  test_phase_v05_16b2_multi_likelihood.py  test_phase_v05_16b_high_res.py  test_phase_v05_17_misc.py  test_phase_v05_17b2_contributions_surface_mie.py  test_phase_v05_17b_contributions.py  test_phase_v05_2a_setup_api.py  test_phase_v05_2b_free_gravity_mass.py  test_phase_v05_3_surfaces.py  test_phase_v05_4_h_minus.py  test_phase_v05_5_photometric.py  test_phase_v05_6_pt_profiles.py  test_phase_v05_7_x_profiles.py  (+10 more)
