[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxposeidon"
version = "0.0.20"
description = "JAX-native port of POSEIDON's transmission-spectroscopy forward model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Will Handley", email = "wh260@cam.ac.uk" },
]
keywords = ["exoplanets", "atmospheric-retrieval", "jax", "transmission-spectroscopy", "POSEIDON"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.4.30",
    "numpy>=2.1",
    "scipy",
    "h5py",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
# POSEIDON itself is the numerical oracle used by every phase test, but it
# is not on PyPI. Install it separately:
#   pip install git+https://github.com/MartianColonist/POSEIDON
# and set POSEIDON_input_data to the opacity-database directory.

[project.urls]
Repository = "https://github.com/handley-lab/jaxPOSEIDON"
"POSEIDON (oracle)" = "https://github.com/MartianColonist/POSEIDON"

[tool.setuptools.packages.find]
include = ["jaxposeidon*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line-length handled by formatter
    "E741",   # ambiguous variable name (`l`) — POSEIDON-mirror code keeps original names
    "B007",   # unused loop control variable — same reason
    "B008",   # function call in default arg — POSEIDON uses np.array() defaults
    "C408",   # unnecessary dict() — POSEIDON-mirror code reads better with explicit dict()
    "SIM108", # ternary preference disabled — POSEIDON parity often clearer with if/else
    "SIM118", # `dict.keys()` membership — POSEIDON uses explicit keys
    "UP031",  # printf-style format — keep POSEIDON's logging style
    "F841",   # unused local — POSEIDON-mirror code keeps tracked locals
    "F401",   # unused imports — re-exports
]

[tool.ruff.lint.per-file-ignores]
"jaxposeidon/__init__.py" = ["F401", "E402"]  # re-exports + jax_enable_x64 before imports
"jaxposeidon/core.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
